# instrument

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  format.sh
.github/workflows/: ci.yml
include/instrument/: array.hpp  block_array.hpp  block_matrix.hpp  composite.hpp  context.hpp  csr_matrix.hpp  dense_matrix.hpp  diagonal_matrix.hpp  factorization.hpp  fast_pimpl.hpp  iterative_solver.hpp  matrix.hpp  pimpl.hpp  preconditioner.hpp  sparse_matrix.hpp  sparsity_pattern.hpp  timing.hpp  value_pimpl.hpp  vector.hpp  zero_matrix.hpp
tests/: CMakeLists.txt  ginkgo.supp  lsan_suppressions.txt  test_array_componentwise.cpp  test_array_copy.cpp  test_array_reductions.cpp  test_array_storage.cpp  test_block_array.cpp  test_block_matrix.cpp  test_block_vector_blas1.cpp  test_composite.cpp  test_context.cpp  test_csr_matrix.cpp  test_dense_matrix.cpp  test_diagonal_matrix.cpp  test_example.cpp  test_factorization.cpp  test_fast_pimpl.cpp  test_ginkgo_smoke.cpp  test_iterative_solver.cpp  test_matrix_blas2.cpp  test_matrix_blas3.cpp  test_matrix_copy.cpp  test_matrix_lapack.cpp  test_matrix_storage.cpp  test_pimpl.cpp  test_preconditioner.cpp  test_sparse_matrix.cpp  test_sparsity_pattern.cpp  test_timing.cpp  test_timing_mpi.cpp  test_value_pimpl.cpp  test_vector.cpp  test_vector_componentwise.cpp  test_vector_copy.cpp  test_vector_reductions.cpp  test_vector_storage.cpp  test_zero_matrix.cpp
